--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -155,7 +155,7 @@
 				<td class="feedsrc"> 
 					<%= source %>
 				</td>
-				<td class="feedval" data-food="<%=entry.summary %> data-publ=<%=entry.content%>">
+				<td class="feedval" data-food="<%=entry.summary %>" >
 					<%= entry.name %>
 				</td>
 			</tr>
@@ -205,14 +205,14 @@
 <%end%>
 
 <script>
-function loadIframe(iframeName, url,publ) {
+function loadIframe(iframeName, url) {
     /*var $iframe = $('#' + iframeName);
     if ( $iframe.length ) {
         $iframe.attr('src',url);   
         return false;
     }*/
 	//$("#feedres").html("");
-	alert(publ);
+	
 	var stri="<center><h1><i>News Feed</i> </h1>"+url+"</center>";
 	//$("#feedres").html(stri);
     $("#feedres").attr('srcdoc',stri);
@@ -240,9 +240,9 @@ jQuery(document).ready(function() {
 		console.log(unitNo);
 		
 		unibo=td.data("food");
-		uniglo=td.data("publ");
+		
 		console.log(unibo);
-		loadIframe("frameDemo",unibo,uniglo);
+		loadIframe("frameDemo",unibo);
 		$("#frameDemo").show();
 	});
 });
